--- a/graphql-node-api/package.json
+++ b/graphql-node-api/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clusters": "set NODE_ENV=development & set port=8080 & node dist/clusters",
+    "clusters": "NODE_ENV=production port=8080 node dist/clusters",
     "build": "npm run gulp build",
     "start": "npm run build && npm run clusters",
     "dev": "set NODE_ENV=development & set JWT_SECRET=batman & nodemon --delay 5 dist/index",
     "gulp": "node_modules/.bin/gulp",
     "test": "set NODE_ENV=test & set JWT_SECRET=jwt_test & mocha",
+    "pipelines": "set NODE_ENV=pipelines & set JWT_SECRET=jwt_pipelines & mocha",
     "coverage": "nyc --extension .ts --include src/**/*.ts --reporter html npm test"
   },
   "keywords": [],
